--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             Con mucho <strong>código</strong> (y mucho amor fraterno), tu hermano programador, <br>
                             <strong>Alex</strong>.<br><br>
                             
-                            <span style="font-size: 0.9em; color: grey;">
+                            <span color: grey;">
                                 PD: Si esta carta fuera un script, vendría con este comentario al final:
                             </span><br>
                             <code>
