--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
         </div>
         <div class="imagen-abajo">
             <!-- Cambia "alexmami.jpeg" por la foto que quieras usar con tu hermana -->
-            <img src="alexmonica.jpeg" alt="Foto con Mónica">
+            <img src="alexmami.jpeg" alt="Foto con Mónica">
         </div>
     </div>
