--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                         <strong>🎂🎂🎂 ¡Feliz Cumple! 🎂🎂🎂</strong>
                         <p>
                             Hoy celebramos que hace unos años llegó <strong>una hermana increíble</strong> a mi vida. 
-                            Gracias por ser esa compañera de aventuras, confidente de secretos, y por  hacer cada momento más divertido. 
-                            <em>Ojala</em> te guste <em>tu regalo</em> y te diviertas estos meses en Cánada <br><br>
+                            Gracias por ser esa compañera de aventuras, confidente de secretos, y por hacer cada momento más divertido. 
+                            <em>Ojalá</em> te guste <em>tu regalo</em> y te diviertas estos meses en Canadá. <br><br>
                             
                             En tu día deseo que todos tus sueños se hagan realidad. Gracias por aguantar mis bromas
                             y por compartir tanto cariño y confianza. <br><br>
@@ -28,11 +28,11 @@
                             Con mucho <strong>código</strong> (y mucho amor fraterno), tu hermano programador, <br>
                             <strong>Alex</strong>.<br><br>
                             
-                            <span color: grey;">
+                            <span  color: grey;">
                                 PD: Si esta carta fuera un script, vendría con este comentario al final:
                             </span><br>
                             <code>
-                            // Fin del programa: “Felicidadesssssssssssssss_Mónica();”
+                                // Fin del programa: “Felicidadesssssssssssssss_Mónica();”
                             </code>
                         </p>
                     </div>
@@ -47,3 +47,7 @@
             <img src="alexmami.jpeg" alt="Foto con Mónica">
         </div>
     </div>
+
+    <script src="script_v2.js"></script>
+</body>
+</html>
